# lush

./: .gitignore  Cargo.toml  DESIGN.md  DOCUMENTATION.md  GRAMMAR.md  Grammar.md  LINKS.md  NOTES.md  QUESTIONS.md  README.md  TODO.md
crates/interpreter/: Cargo.toml
crates/interpreter/src/: evaluate.rs  evaluation_error.rs  interpreter.rs  lib.rs  scope.rs
crates/interpreter/src/evaluate/: cmd_call.rs  expr.rs
crates/interpreter/tests/: main.rs
crates/lu_cli/: Cargo.toml
crates/lu_cli/src/: lib.rs
crates/lu_cmds/: Cargo.toml
crates/lu_cmds/src/: array.rs  builtin.rs  cmd_prelude.rs  external_cmds_attr.rs  lib.rs  lu_std.rs  print.rs  run_external_cmd.rs  test_print.rs
crates/lu_cmds/src/builtin/: cd.rs  is_set.rs  select.rs  ty_of.rs
crates/lu_cmds/src/lu_std/: array.rs  fs.rs  iter_funcs.rs  lu_native_std_mod.rs  test.rs
crates/lu_cmds/src/lu_std/array/: push.rs
crates/lu_cmds/src/lu_std/fs/: ls.rs
crates/lu_cmds/std/: iter_funcs.lu
crates/lu_cmds/test_data/lu_std/array/: push.json_test
crates/lu_cmds/test_data/lu_std/builtin/: is_set.json_test  type_of.json_test
crates/lu_cmds/test_data/lu_std/iter/: filter.json_test  map.json_test
crates/lu_cmds/tests/: lu_std.rs
crates/lu_cmds/tests/lu_std/: fs.rs
crates/lu_cmds/tests/lu_std/fs/: ls.rs
crates/lu_conformance/: Cargo.toml
crates/lu_conformance/src/: lib.rs
crates/lu_dbg/: Cargo.toml
crates/lu_dbg/src/: action.rs  dbg_repl.rs  lib.rs
crates/lu_dbg/src/action/: dbg_action_prelude.rs  help.rs  next.rs  print.rs  scope.rs  skip.rs  step.rs
crates/lu_error/: Cargo.toml
crates/lu_error/src/: ast_err.rs  eval_err.rs  fs_err.rs  lib.rs  parse_err.rs  ty_err.rs  util.rs
crates/lu_error_reporting/: Cargo.toml  build.rs
crates/lu_error_reporting/src/: files.rs  lib.rs  lu_source_files.rs  lu_source_files_util.rs  report_ast_err.rs  report_eval_err.rs  report_parse_err.rs  report_ty_err.rs
crates/lu_interpreter/: Cargo.toml
crates/lu_interpreter/src/: README.md  callable.rs  command.rs  evaluate.rs  function.rs  interactive_interpreter.rs  interpreter.rs  lib.rs  resolve.rs  scope.rs  typecheck.rs  user_def_tys.rs  value_type.rs  variable.rs  visit_arg.rs
crates/lu_interpreter/src/callable/: command.rs  function.rs  run_external_cmd.rs  signature.rs
crates/lu_interpreter/src/command/: run_external_cmd.rs
crates/lu_interpreter/src/evaluate/: block.rs  block_stmt.rs  cls_expr.rs  cls_stmt.rs  cmd_call.rs  cmd_stmt.rs  condition.rs  eval_prelude.rs  expr.rs  fn_stmt.rs  for_stmt.rs  if_stmt.rs  let_stmt.rs  math_expr.rs  piped_cmds_stmt.rs  ret_stmt.rs  source_file.rs  statement.rs  strct_stmt.rs  table_expr.rs  test.rs
crates/lu_interpreter/src/interpreter/: command_storage.rs
crates/lu_interpreter/src/resolve/: block_stmt.rs  source_file.rs  test.rs
crates/lu_interpreter/src/typecheck/: block_stmt.rs  cls_expr.rs  cmd_select.rs  cmd_stmt.rs  condition.rs  expr.rs  fn_cls_ty_check.rs  fn_stmt.rs  for_stmt.rs  if_stmt.rs  let_stmt.rs  math_expr.rs  piped_cmds_stmt.rs  resolve.rs  ret_stmt.rs  source_file.rs  statement.rs  table_expr.rs  test.rs  value_path_expr.rs  value_type.rs
crates/lu_interpreter/src/typecheck/resolve/: block_stmt.rs
crates/lu_interpreter/src/user_def_tys/: function.rs  strct.rs  struct_.rs
crates/lu_interpreter/test_data/evaluate/as_cast/: general.json_test
crates/lu_interpreter/test_data/evaluate/cls_expr/: simple.json_test
crates/lu_interpreter/tests/: main.rs
crates/lu_interpreter_structs/: Cargo.toml
crates/lu_interpreter_structs/src/: command.rs  command_collection.rs  dbg_state.rs  evaluate.rs  external_cmd.rs  external_cmds_attr.rs  flag.rs  lib.rs  module.rs  scope.rs  special_cmds.rs  special_scope_vars.rs  table.rs  use_path.rs  user_def_tys.rs  value.rs  value_type.rs  variable.rs
crates/lu_interpreter_structs/src/user_def_tys/: function.rs  strct.rs  table.rs
crates/lu_parser/: Cargo.toml  build.rs  out
crates/lu_parser/src/: event.rs  generated.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  serde.rs  syntax_kind.rs  token_set.rs
crates/lu_parser/src/grammar/: block_stmt.rs  cls_expr.rs  cmd_stmt.rs  comments.rs  condition.rs  expr.rs  file_name_expr.rs  fn_stmt.rs  for_stmt.rs  if_stmt.rs  incomplete_input.rs  let_stmt.rs  piped_cmds_stmt.rs  ret_stmt.rs  signature.rs  struct_stmt.rs  type_.rs  use_.rs  use_stmt.rs  value_path_expr.rs
crates/lu_parser/templates/: syntax_kind.rs
crates/lu_parser/test_data/: lexer.yaml
crates/lu_syntax/: Cargo.toml  build.rs
crates/lu_syntax/src/: ast.rs  build_tree.rs  lib.rs  signature.rs  syntax_node.rs  test.rs  validate.rs
crates/lu_syntax/src/ast/: block_stmt.rs  cls_expr.rs  cmd_stmt.rs  expr.rs  file_name_expr.rs  fn_stmt.rs  for_stmt.rs  generated.rs  if_stmt.rs  let_stmt.rs  math_expr.rs  optional_expr.rs  piped_cmds_stmt.rs  ret_stmt.rs  signature.rs  strct_stmt.rs  struct_stmt.rs  table_expr.rs  type_.rs  use_stmt.rs  value_path_expr.rs
crates/lu_syntax/src/validate/: cmd_signature.rs
crates/lu_syntax/templates/: nodes.rs
crates/lu_syntax/test_data/validate/: signature.json_test
crates/lu_test_support/: Cargo.toml
crates/lu_test_support/playground/plugins/: example_plugin.lu
crates/lu_test_support/src/: binary.rs  lib.rs  playground.rs  test_prelude.rs
crates/lu_text_util/: Cargo.toml
crates/lu_text_util/src/: lib.rs
crates/lu_value/: Cargo.toml
crates/lu_value/src/: lib.rs  value_type.rs
crates/parser/: Cargo.toml  build.rs  out.txt
crates/parser/meta/: syntax.toml
crates/parser/scripts/: show_result
crates/parser/src/: event.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  serde.rs  token_set.rs
crates/parser/src/grammar/: cmd_stmt.rs  expr.rs  fn_stmt.rs  let_stmt.rs  signature.rs
crates/parser/templates/: syntax_kind.rs
crates/parser/test_data/: cmd_stmts.yaml  lexer.yaml
crates/parser/tests/: cmd_stmt.rs  lexer.rs
crates/syntax/: Cargo.toml  build.rs
crates/syntax/src/: ast.rs  build_tree.rs  lib.rs  syntax_error.rs  syntax_node.rs
crates/syntax/src/ast/: generated.rs  traits.rs
crates/syntax/templates/: nodes.rs
(+119 files in other folders)
