[package]
name = "lush"
version = "0.1.0"
authors = ["Leonhard Kipp <Leonhard.Kipp@alumni.fh-aachen.de>"]
edition = "2018"

[workspace]
members = ["crates/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lu_cli = { version = "0.1.0", path = "crates/lu_cli" }
log = "0.4.14"
env_logger = "0.9.0"
