[package]
name = "lush"
version = "0.1.0"
authors = ["Leonhard Kipp <Leonhard.Kipp@alumni.fh-aachen.de>"]
edition = "2018"

[workspace]
members = ["crates/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lu_cli = { version = "0.1.0", path = "crates/lu_cli" }
lu_cfg_home = { version = "0.1.0", path = "crates/lu_cfg_home" }
lu_interpreter_structs = { version = "0.1.0", path = "crates/lu_interpreter_structs" }
lu_interpreter = { version = "0.1.0", path = "crates/lu_interpreter" }
lu_error = { version = "0.1.0", path = "crates/lu_error" }
lu_text_util = { version = "0.1.0", path = "crates/lu_text_util" }
lu_stdx = { version = "0.1.0", path = "crates/lu_stdx" }
lu_error_reporting = { version = "0.1.0", path = "crates/lu_error_reporting" }
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.*"
