[package]
name = "lu_cmds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { version = "0.1.0", path = "../interpreter" }
lu_error = { version = "0.1.0", path = "../lu_error" }
value = { version = "0.1.0", path = "../value" }

log = "0.4.14"

[dev-dependencies]
pretty_env_logger = "0.4.0"
