[package]
name = "lu_cmds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_interpreter = { version = "0.1.0", path = "../lu_interpreter" }
lu_error = { version = "0.1.0", path = "../lu_error" }
lu_value = { version = "0.1.0", path = "../lu_value" }

log = "0.4.14"
vec_box = "1.0.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
