[package]
name = "lu_cmds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_interpreter_structs = { version = "0.1.0", path = "../lu_interpreter_structs" }
lu_error = { version = "0.1.0", path = "../lu_error" }
lu_value = { version = "0.1.0", path = "../lu_value" }
lu_syntax = { version = "0.1.0", path = "../lu_syntax" }
lu_syntax_elements = { version = "0.1.0", path = "../lu_syntax_elements" }

log = "0.4.14"
vec_box = "1.0.0"
once_cell = "1.8.0"
derive_more = "0.99.16"
derive-new = "0.5.9"
educe = "0.4.18"
parking_lot = "0.11.2"

[dev-dependencies]
pretty_env_logger = "0.4.0"
lu_interpreter = { version = "0.1.0", path = "../lu_interpreter" }
lu_test_support = { version = "0.1.0", path = "../lu_test_support" }
lu_conformance = { version = "0.1.0", path = "../lu_conformance" }
conformance = "0.2.0"
serde_json = "1.0.64"
