[package]
name = "lu_error"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-size = { version = "1.1", features = ["serde"] }
thiserror = "1.0.26"
strum = "0.21"
strum_macros = "0.21"
derive-new = "0.5"
codespan-reporting = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
educe = "0.4.18"
derive_more = "0.99.16"
