[package]
name = "lu_interpreter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_parser = { version = "0.1.0", path = "../lu_parser" }
lu_error = { version = "0.1.0", path = "../lu_error" }
lu_fs = { version = "0.1.0", path = "../lu_fs" }
lu_text_util = { version = "0.1.0", path = "../lu_text_util" }
lu_syntax = { version = "0.1.0", path = "../lu_syntax" }
lu_value = { version = "0.1.0", path = "../lu_value" }

derive-new = "0.5"
indextree = "4.3.1"
parking_lot = "0.11"
log = "0.4.14"

[dev-dependencies]
lu_cmds = { version = "0.1.0", path = "../lu_cmds" }
conformance = "0.2.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
# sugars = "3.0.0"
vec_box = "1.0.0"
