[package]
name = "lu_syntax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_parser = { version = "0.1.0", path = "../lu_parser" }
lu_value = { version = "0.1.0", path = "../lu_value" }
lu_error = { version = "0.1.0", path = "../lu_error" }

rowan = "0.10.6"
text-size = "1.1.0"
log = "0.4.14"
contracts = "0.6.2"
derive-new = "0.5.9"

[build-dependencies]
lu_syntax_elements = { version = "0.1.0", path = "../lu_syntax_elements" }

glob = "0.3.0"
heck = "0.3.2"
serde = { version = "1.0.126", features = ["derive"] }
tera = "1.10.0"
toml = "0.5.8"
