[package]
name = "lu_test_support"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_interpreter = { version = "0.1.0", path = "../lu_interpreter" }
lu_cmds = { version = "0.1.0", path = "../lu_cmds" }
lu_value = { version = "0.1.0", path = "../lu_value" }

vec_box = "1.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
parking_lot = "0.11.2"
temp_testdir = "0.2.3"
