[package]
name = "lu_test_support"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lu_interpreter = { version = "0.1.0", path = "../lu_interpreter" }
lu_interpreter_structs = { version = "0.1.0", path = "../lu_interpreter_structs" }
lu_error = { version = "0.1.0", path = "../lu_error" }
lu_cmds = { version = "0.1.0", path = "../lu_cmds" }
lu_conformance = { version = "0.1.0", path = "../lu_conformance" }
vec_rc = { version = "0.1.0", path = "../vec_rc" }

log = "0.4.14"
pretty_env_logger = "0.4.0"
parking_lot = "0.11.2"
temp_testdir = "0.2.3"

conformance = "0.2.0"
serde_json = "1.0.64"
manifest-dir-macros = "0.1.11"
temp-file = "0.1.6"
