[package]
name = "lu_text_util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
educe = "0.4.18"
lu_error = { version = "0.1.0", path = "../lu_error" }
lu_fs = { version = "0.1.0", path = "../lu_fs" }
