[package]
name = "lu_value"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
ordered-float = {version = "2.0", features = ["serde"] }
erased-serde = "0.3.16"
typetag = "0.1.7"
