[package]
name = "parser"
version = "0.1.0"
authors = ["Leonhard Kipp <Leonhard.Kipp@alumni.fh-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
derive-new = "0.5"
drop_bomb = "0.1.4"
itertools = "0.10.0"

[build-dependencies]
glob = "0.3.0"
heck = "0.3.2"
serde = { version = "1.0.126", features = ["derive"] }
tera = "1.10.0"
toml = "0.5.8"
