[package]
name = "parser"
version = "0.1.0"
authors = ["Leonhard Kipp <Leonhard.Kipp@alumni.fh-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
derive-new = "0.5"
drop_bomb = "0.1.4"
itertools = "0.10.0"
log = "0.4.14"
logos = "0.12.0"
serde = "1.0.126"
text-size = "1.1.0"
lazy_static = "1.4.0"

[dev-dependencies]
conformance = "0.2.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0.64"
serde_yaml = "0.8.17"

[build-dependencies]
glob = "0.3.0"
heck = "0.3.2"
serde = { version = "1.0.126", features = ["derive"] }
tera = "1.10.0"
toml = "0.5.8"
