[package]
name = "syntax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { version = "0.1.0", path = "../parser" }
lu_error = { version = "0.1.0", path = "../lu_error" }

rowan = "0.10.6"
text-size = "1.1.0"

[build-dependencies]
syntax_elements = { version = "0.1.0", path = "../syntax_elements" }
glob = "0.3.0"
heck = "0.3.2"
serde = { version = "1.0.126", features = ["derive"] }
tera = "1.10.0"
toml = "0.5.8"
